prog(boid.js, Canvas.js): Tweaks to alignment, separation, and cohesion factors for better behavior. Changed canvas sizing to fit parent div. Still issue of triangle distortion but hard to tell when drawn small enough.

--- a/styles/_canvas.module.scss
+++ b/styles/_canvas.module.scss
@@ -1,4 +1,4 @@
 .canvas {
-  height: auto;
+  height: 100%;
   width: 100%;
 }
